--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <img src="https://example.com/splatoon-image.jpg" alt="Splatoon Game Image" class="game-image">
 
         <h2>什麼是 Splatoon?</h2>
-        <p>Splatoon 是任天堂推出的一款多人競技射擊遊戲，遊戲的主要特色是玩家扮演墨水怪（Inkling），用墨水作為武器進行對戰。遊戲不僅具備快節奏的射擊元素，還有富有創意的隊伍合作模式，以及獨特的戰鬥地圖和可愛的角色設計。</p>
+        <p>Splatoon 是任天堂推出的一款多人競技射擊遊戲，遊戲的主要特色是玩家扮演人形魷魚/章魚（Inkling），用墨水作為武器進行對戰。遊戲不僅具備快節奏的射擊元素，還有富有創意的隊伍合作模式，以及獨特的戰鬥地圖和可愛的角色設計。</p>
 
         <h2>遊戲特色</h2>
         <div class="features">
